[sdist]
formats = gztar

[metadata]
name = example_python_package
version = 0.0.1
description = Bare bones python package example
author = Jesse Cusack
author_email = jmcusack@marine.rutgers.edu
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
license_file = LICENSE

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/
classifiers =
    Development Status :: 2 - Pre-Alpha 
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
python_requires = >=3.6
################ Up until here

zip_safe = False
packages = find: